# quick-macro-training

./: Cargo.toml
hello_macro_derive/src/: lib.rs
qmt-macros/: Cargo.toml
qmt-macros/src/: lib.rs
