[package]
name = "quick-macro-training"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["hello_macro", "hello_macro_derive", "qmt-macros"]

[dependencies]
hello_macro = { path = "./hello_macro" }
qmt-macros = { path = "./qmt-macros" }
hello_macro_derive = { path = "./hello_macro_derive" }
